Scrollbar fixed

--- a/Regolamento.css
+++ b/Regolamento.css
@@ -11,7 +11,6 @@ body {
   margin-top: 57px;
   position: fixed;
   z-index: 1;
-  top: 0;
   background-color: rgb(29, 29, 29);
   overflow-x: hidden;
 }
